syntax = "proto3";

package id;

service IdService {
    rpc Register (RegisterParam) returns (RegisterResponse);//注册服务
    rpc Generate  (GenerateParam) returns (GlobalId);//生成id
    rpc Info (GlobalId) returns (RegisterResponse);//根据id查询所属类别
    rpc Types (TypeSearch) returns (TypesResponse);
}
message TypeSearch{
    string name = 1;
}
//注册返回对象
message RegisterResponse{
    int32 type = 1;//类型id
    string name = 2;//名称
    string description = 3;//描述
}
message TypesResponse{
    repeated RegisterResponse  data = 1;
}

//注册参数
message RegisterParam {
    string name = 1;//名称
    string description = 2;//描述
}
message GlobalId{
    int32 id = 1;
}
//生成参数
message GenerateParam{
    int32 type = 1;//生成类型
}